test/parser/accept/mapping-variant-init.ptk
rule r = "" => child: $0;