test/parser/reject/empty-mapping.ptk
# expected: E1201
rule group = "value" => ;